<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CadTarefaFragment"
    android:background="@color/roxinho2">

    <TextView
        android:id="@+id/text_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo" />

    <EditText
        android:id="@+id/edit_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/text_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/descricao"/>

    <EditText
        android:gravity="top"
        android:lines="5"
        android:id="@+id/edit_descricao"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/text_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:layout_marginTop="200dp"/>

    <Button
        android:id="@+id/bt_data"
        android:backgroundTint="@color/roxinho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:text="@string/seleciona_data" />

    <Button
        android:id="@+id/bt_salvar"
        android:backgroundTint="@color/roxinho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:layout_marginTop="280dp"/>



</FrameLayout>